2006-09-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am: Added new `snapshot', `snapshot-src' and
	`snapshot-html' targets for automatic creation of snapshot
	distribution packages.

2006-08-31  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* doc/tutorial/itfile.doc: Fixed small documentation bug.

2006-08-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/svec.h: Fixed bug [1545798]. Sparse vectors are now
	correctly compared using `==' operator. Thanks to Timo for
	reporting this bug.

2006-08-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h: Added simplified
	versions of demodulate_soft_bits() functions to the QPSK modulator
	class. This gave about 40% improvement in the demodulation
	performance.

2006-08-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.h, tests/modulator_test.cpp: Added
	deprecated demodulate_soft_bits_approx() functions with a warning
	message for backward compatibility reasons. Besides, the default
	soft demodulation method of demodulate_soft_bits() functions is
	now log-MAP.
	
2006-08-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp: Fixed bug [1542064]. The problem was that
	the index in the tap_doppler_spectrum array in the
	TDL_Channel::init() function could go out of bounds, if the
	TDL_Channel class was used with two different channel profile
	lengths. Thanks to Jordy Potman for reporting this bug and
	providing a patch with a solution (merged rev. 645:646 from
	itpp-3-10 branch).

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	tests/modulator_test.cpp: Further redesign of 1D and 2D modulator
	classes. From now, there is only one templated base class
	Modulator, which can handle 1D (real) and 2D (complex)
	constellations. BPSK and PAM modulators are split into:
	BPSK_c/PAM_c classes which use complex valued interface but only
	real part of the signal is used, and BPSK/PAM classes that have